add clean up data after test